--- a/css/style.css
+++ b/css/style.css
@@ -320,6 +320,7 @@ li a {
 
 @media screen and (max-width: 480px) {
   #site_wrap {
+   width:50%;
     background-color: black;
     grid-template-areas:
       "header header header header"
