--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@
 *::after {
   box-sizing: border-box;
 }
+
+
+
 @font-face {
   font-family: newFont;
   src: url("/font/OratorStd.otf");
@@ -318,14 +321,23 @@ li a {
   margin-left: 220px;
 }
 
-@media screen and (max-width: 480px) {
+@media only screen and(min-width:320px) and (max-width: 480px) {
   #site_wrap {
+    
     background-color: black;
     grid-template-areas:
       "header header header header"
       "hero_area_1 hero_area_1 hero_area_1 hero_area_1"
       "hero_area_2 hero_area_2 hero_area_2 hero_area_2"
       "hero_area_3 hero_area_3 hero_area_3 hero_area_3";
+      
+  }
+  .header{
+    width:10%;
+    
+  }
+  .hero_area_1{
+    width:50%;
   }
 }
 
